--- a/STDShop.Data/STDShop.Data.csproj
+++ b/STDShop.Data/STDShop.Data.csproj
@@ -38,6 +38,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -49,7 +57,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastucture\DbFactory.cs" />
+    <Compile Include="Infrastucture\Disposable.cs" />
+    <Compile Include="Infrastucture\IDbFactory.cs" />
+    <Compile Include="Infrastucture\IRepository.cs" />
+    <Compile Include="Infrastucture\IUnitOfWork.cs" />
+    <Compile Include="Infrastucture\RepositoryBase.cs" />
+    <Compile Include="Infrastucture\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="STDShopDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -60,6 +76,14 @@
       <Project>{8a4c8aa5-7ac4-4e2b-91a8-c1c1e240cf15}</Project>
       <Name>STDProject.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\STDShop.Model\STDShop.Model.csproj">
+      <Project>{54db2457-2df8-4da4-869a-625d094b62a4}</Project>
+      <Name>STDShop.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
