--- a/STDShop.Data/STDShop.Data.csproj
+++ b/STDShop.Data/STDShop.Data.csproj
@@ -69,6 +69,14 @@
     <Compile Include="Migrations\201608241348304_InitialDB.Designer.cs">
       <DependentUpon>201608241348304_InitialDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201608291534353_Intergrate-AspnetIdentity.cs" />
+    <Compile Include="Migrations\201608291534353_Intergrate-AspnetIdentity.Designer.cs">
+      <DependentUpon>201608291534353_Intergrate-AspnetIdentity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201608291614336_Changekey.cs" />
+    <Compile Include="Migrations\201608291614336_Changekey.Designer.cs">
+      <DependentUpon>201608291614336_Changekey.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
@@ -108,6 +116,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201608241348304_InitialDB.resx">
       <DependentUpon>201608241348304_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608291534353_Intergrate-AspnetIdentity.resx">
+      <DependentUpon>201608291534353_Intergrate-AspnetIdentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608291614336_Changekey.resx">
+      <DependentUpon>201608291614336_Changekey.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
