--- a/STDShop.Data/STDShop.Data.csproj
+++ b/STDShop.Data/STDShop.Data.csproj
@@ -65,17 +65,9 @@
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\RepositoryBase.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
-    <Compile Include="Migrations\201608241348304_InitialDB.cs" />
-    <Compile Include="Migrations\201608241348304_InitialDB.Designer.cs">
-      <DependentUpon>201608241348304_InitialDB.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201608291534353_Intergrate-AspnetIdentity.cs" />
-    <Compile Include="Migrations\201608291534353_Intergrate-AspnetIdentity.Designer.cs">
-      <DependentUpon>201608291534353_Intergrate-AspnetIdentity.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201608291614336_Changekey.cs" />
-    <Compile Include="Migrations\201608291614336_Changekey.Designer.cs">
-      <DependentUpon>201608291614336_Changekey.cs</DependentUpon>
+    <Compile Include="Migrations\201608301541071_initDB.cs" />
+    <Compile Include="Migrations\201608301541071_initDB.Designer.cs">
+      <DependentUpon>201608301541071_initDB.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -114,14 +106,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201608241348304_InitialDB.resx">
-      <DependentUpon>201608241348304_InitialDB.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201608291534353_Intergrate-AspnetIdentity.resx">
-      <DependentUpon>201608291534353_Intergrate-AspnetIdentity.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201608291614336_Changekey.resx">
-      <DependentUpon>201608291614336_Changekey.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201608301541071_initDB.resx">
+      <DependentUpon>201608301541071_initDB.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
