--- a/STDShop.Data/STDShop.Data.csproj
+++ b/STDShop.Data/STDShop.Data.csproj
@@ -81,6 +81,10 @@
     <Compile Include="Migrations\201609211317580_AddQuantityField.Designer.cs">
       <DependentUpon>201609211317580_AddQuantityField.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609211443014_AddForeignKey.cs" />
+    <Compile Include="Migrations\201609211443014_AddForeignKey.Designer.cs">
+      <DependentUpon>201609211443014_AddForeignKey.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
@@ -129,6 +133,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609211317580_AddQuantityField.resx">
       <DependentUpon>201609211317580_AddQuantityField.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609211443014_AddForeignKey.resx">
+      <DependentUpon>201609211443014_AddForeignKey.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
