--- a/STDShop.Web/AppSettings.config
+++ b/STDShop.Web/AppSettings.config
@@ -5,4 +5,11 @@
   <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   <add key="PageSize" value="20"/>
   <add key="MaxPage" value="5"/>
+
+  <add key="SMTPHost" value="smtp.gmail.com"/>
+  <add key="SMTPPort" value="587"/>
+  <add key="FromEmailAddress" value="luonghau91@gmail.com"/>
+  <add key="FromEmailPassword" value="16051995"/>
+  <add key="FromName" value="HauLV"/>
+  <add key="AdminEmail" value="luonghau91@gmail.com"/>
 </appSettings>
