--- a/STDShop.Web/packages.config
+++ b/STDShop.Web/packages.config
@@ -8,6 +8,7 @@
   <package id="Autofac.WebApi2" version="4.0.0" targetFramework="net46" />
   <package id="AutoMapper" version="4.2.1" targetFramework="net46" />
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
+  <package id="Captcha" version="4.1.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="0.0.1" targetFramework="net46" />
